kubernetes/apps/authentik/authentik/httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-http
spec:
  parentRefs:
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: http-wildcard
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: http-wildcard-local
  hostnames:
    - authentik.${PUBLIC_DOMAIN}
    - authentik.${LOCAL_DOMAIN}
  rules:
    - filters:
        - type: CORS
          cors:
            allowCredentials: true
            allowOrigins:
              - "*"
            allowMethods:
              - "*"
            allowHeaders:
              - "*"
            exposeHeaders:
              - "*"
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik-https
spec:
  parentRefs:
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: https-wildcard
    - name: default
      namespace: istio-system
      kind: Gateway
      sectionName: https-wildcard-local
  hostnames:
    - authentik.${PUBLIC_DOMAIN}
    - authentik.${LOCAL_DOMAIN}
  rules:
    - backendRefs:
        - name: authentik-server
          port: 80
      filters:
        - type: CORS
          cors:
            allowCredentials: true
            allowOrigins:
              - "*"
            allowMethods:
              - "*"
            allowHeaders:
              - "*"
            exposeHeaders:
              - "*"
